# Kaggle

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  tripforge.ipynb  tripforge_demo.ipynb
.agents/: AGENTS.md
.agents/skills/tripforge_manager/: SKILL.md
data/: activities_db.json
profiles/: .gitkeep
static/css/: custom.css
static/js/: stream.js
templates/: base.html  demo.html  index.html  replan.html  result.html
tests/: test_tripforge.py
tripforge/: __init__.py  cli.py  orchestrator.py
tripforge/agents/: __init__.py  disruption_agent.py  itinerary_agent.py  profile_agent.py  research_agent.py
tripforge/mcp_server/: __init__.py  travel_tools_server.py
tripforge/tools/: __init__.py  activities_tool.py  country_info_tool.py  weather_tool.py
tripforge/utils/: __init__.py  formatters.py  security.py
