[project]
name = "tripforge"
version = "0.1.0"
description = "AI-powered hyper-personalized travel planning agent"
requires-python = ">=3.11"
dependencies = [
  "google-adk",
  "mcp",
  "httpx",
  "rich",
  "python-dotenv",
  "cryptography",
  "flask",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
